--- a/ThuyCTP/ASM02Solution/DataAccess/appsettings.json
+++ b/ThuyCTP/ASM02Solution/DataAccess/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "ConnectionString": {
-    "MyStockDB": "Server=(DESKTOP-SVGL437\\SQLEXPRESS);uid=duy;pwd=123;database=SaleManagerment;TrustServerCertificate=True"
-  },
-
-  "AdminLogin": {
-    "UserName": "duyhtk",
-    "Password": "duyhtk"
+  "exclude": [
+    "**/bin",
+    "**/bower_components",
+    "**/jspm_packages",
+    "**/node_modules",
+    "**/obj",
+    "**/platforms"
+  ],
+  "DefaultAccount": {
+    "Email": "admin@fstore.com",
+    "password": "admin@@"
   }
 }
